# KawaChess

./: .gitignore  app.py  pyproject.toml  test_1.py  test_2.py  test_3.py
kawachess/: __init__.py  astemplates.py  chess.py  colors.py  components.py  constants.py  database.py  error_msg.py  flet_components.py  gripper.py  robot.py  robot_async.py  vision.py
kawachess/as_programs/: kawachess.as
scripts/: app.py  check_robot_status.py  chess_script.py  cv.py  detection.py  flet_app.py  requirements.txt  robot_control.py  simple_telnet.py  tmp.py
scripts/kawachess/: __init__.py  chess.py  colors.py  flet_components.py  robot.py
scripts/komunikacja/: app.py  test.py
temp/: ArUco.py  K-ROSET.py  constants.py  cv_test.py  detection.py  flet_app.py  robot_connection.py  robot_control.py
