# python -m pip install .

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{name = "Jarosław Wierzbowski", email = "jaroslawierzbowski2001@gmail.com"}]
dependencies = [
  "chess >= 1.11.1",
  "pytz >= 2024.2",
  "flet >= 0.25.2",
  "opencv-python >= 4.10.0.84",
  "ruff >= 0.8.3",
]
dynamic = ["version"]
license = {text = "MIT License"}
name = "kawachess"
requires-python = ">=3.13.1"

[tool.ruff]
exclude = [
  "KAWASAKI",
  ".git",
  "piece_svg",
  "chess.db",
  ".gitignore",
  ".svg",
  ".txt",
  ".pyc",
]

indent-width = 4
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "W191",
  "FURB101",
  "FURB103",
  "FURB177",
  "TRY400",
  "PLE1205",
  "ANN101",
  "D100",
  "CPY001",
  "D102",
  "D107",
  "D101",
  "D105",
  "D104",
]

fixable = ["ALL"]

unfixable = ["B"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.setuptools]
py-modules = []
